@@ -1,3 +1,8 @@
+2013-February-27 Struan Robertson
+
+	* PriorDistribution.cpp, CollisionOperator.cpp: Minor bug fixes checked-in
+	on behalf of Robin.
+	
 2013-February-25 Struan Robertson
 
 	* TMatrix.h: Moved Matrix CML I/O methods from temporary class onto TMatrix.
